test/shared/applications/valid/withDirectories/data/server/domain/sampleContext/sampleAggregate/commands.js
'use strict';

const { commands } = require('../../../../base/server/domain/sampleContext/sampleAggregate');

module.exports = commands;
