test/shared/applications/invalid/withDirectoriesAndWrongFileName/data/server/domain/sampleContext/sampleAggregate/aggregate.js
'use strict';

const { initialState, commands, events } = require('../../../../base/server/domain/sampleContext/sampleAggregate');

module.exports = { initialState, commands, events };
